<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserForgotPassword"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgForgotPw"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="196dp"
        android:layout_gravity="center"
        android:background="@drawable/activity_border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtPwReset"
            android:layout_width="311dp"
            android:layout_height="35dp"
            android:text="@string/pw_reset"
            android:textAlignment="center"
            android:textColor="#4D288E"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtPwResetMsg"
            android:layout_width="311dp"
            android:layout_height="41dp"
            android:text="@string/pw_reset_desc"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtEmailAddress"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSendMePw"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:text="@string/pw_reset_btn" />

    </LinearLayout>


</LinearLayout>