<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="237dp"
        android:layout_gravity="center"
        android:background="@drawable/activity_border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSpace"
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:text="@string/login_email"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/lblPw"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:text="@string/login_pw"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:text="@string/login_continue" />

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSignup"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="web"
                android:onClick="onClick"
                android:text="@string/login_signup"
                android:textColor="#394BAF"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtForgotPw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:onClick="onClick"
                android:text="@string/forgot_pw"
                android:textColor="#394BAF"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtSpace2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="107dp"
        android:layout_gravity="center"
        android:background="@drawable/activity_border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblGoogleSignin"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:text="@string/login_google"
            android:textColor="@color/purple_700"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="314dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>