<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSignUp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtSignUpDesc"
            android:layout_width="274dp"
            android:layout_height="35dp"
            android:text="@string/signup_msg"
            android:textAlignment="textEnd"
            android:textColor="#4D288E"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLogoText"
            android:layout_width="98dp"
            android:layout_height="23dp"

            android:layout_marginStart="4dp"
            android:contentDescription="@string/app_name"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgAdventurers"
        android:layout_width="411dp"
        android:layout_height="229dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtSpace2"
        android:layout_width="match_parent"
        android:layout_height="9dp" />

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="333dp"
        android:layout_gravity="center"
        android:background="@drawable/activity_border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblName"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:text="@string/login_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:text="@string/login_email"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblPw"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:text="@string/login_pw"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtPw"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblConfirmPw"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:text="@string/signup_confirmpw"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtConfirmPw"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:text="@string/signup_btn" />
    </LinearLayout>

</LinearLayout>